<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_ombdapi"
            android:title="@string/nav_ombdapi" />
        <item
            android:id="@+id/nav_jsonplaceholder"
            android:title="@string/nav_jsonplaceholder" />
        <item
            android:id="@+id/nav_apteligent"
            android:title="@string/nav_apteligent" />
        <item
            android:id="@+id/nav_movies"
            android:title="@string/nav_movies" />

        <item
            android:id="@+id/nav_notifications"
            android:title="@string/nav_notifications" />

        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>